Complete Home page assignment